--- a/poems.html
+++ b/poems.html
@@ -85,6 +85,178 @@
   <br>
   <main>
 
+
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-4">
+
+          <button type="button" class="btn btn-success btn-lg mod12" data-toggle="modal" data-target="#mode12">
+            <span class="bub">- Persephone<span> <br>
+                click to read
+
+          </button>
+          <!-- modal -->
+          <div class="modal fade" id="mode12">
+            <div class="modal-dialog">
+              <!-- modal content -->
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal"> &#xA9; </button>
+                  <h4 class="modal-title">
+                    TITLE: PERSEPHONE<br> 
+                    BY: ABENA SERWAH-AKOTO DARKWAH (megan) <br>
+
+                  </h4>
+                </div>
+                <div class="modal-body">
+                  <p>
+                    Took me by storm,<br>
+                    I was calm; I was sure.<br>
+                    If you shone on me the light,<br>
+                    You saw my eyes go dark.<br><br>
+
+                    It was day; it was night,<br>
+                    It was dark; bright.<br>
+                    I don't know how I did,<br>
+                    But I deserved that plight.<br><br>
+
+                    Heart-wrenching; hopes faded,<br>
+                    "Real depression!" voices ordered,<br>
+                    Hades teased. Dark, and twisted.<br>
+                    'Twas a banquet, in hell.<br><br>
+
+                    Stood at the edge, smiling with dread,<br>
+                    The Fates held their blade to my thread.<br>
+                    Hel'-lo', she said,<br>
+                    And kissed my lips. Till they bled.<br><br>
+
+                    'Twas the end.<br>
+                    I was dead.<br>
+                    But sitting, head-to-head,<br>
+                    Exchanging looks that spoke<br>
+                    Of love and the dead,<br>
+                    With the wife of death:<br>
+                    Persephone.<br>
+
+                  </p>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-default" data-dismiss="modal">
+                    close
+                  </button>
+
+                </div>
+              </div>
+
+            </div>
+
+          </div>
+        </div>
+        <div class="col-sm-4">
+
+          <button type="button" class="btn btn-success btn-lg mod11" data-toggle="modal" data-target="#mode11">
+            <span class="bub">- anaesthesia<span> <br>
+                click to read
+
+          </button>
+          <!-- modal -->
+          <div class="modal fade" id="mode11">
+            <div class="modal-dialog">
+              <!-- modal content -->
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal"> &#xA9; </button>
+                  <h4 class="modal-title">
+                    TITLE: BETRAYAL: ANAESTHESIA   <br>
+                    BY: JEFFERY BLANKSON
+                  </h4>
+                </div>
+                <div class="modal-body">
+                  <p>
+                      They slip away who never said goodbye <br>
+                      My vintage friends so long depended on <br>
+                      To warm deep levels of my memory<br>
+                      And if I cared for them, care has to learn<br>
+                      How to grieve sparingly and not to cry<br><br>
+                      Age is an exercise in concern<br>
+                      An anaesthetic, lest the misery<br>
+                      Of fresh depatures make the final one<br>
+                      Unwelcome.There's a white indemnity<br>
+                      That with the first frost tamps the garden down<br><br>
+                      There's nothing we can do but let it be<br>
+                      And now this you and now that she is gone <br>
+                      There's less and less of me that needs to die<br>
+                      Nor do these vacant spaces terrify<br>
+                  </p>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-default" data-dismiss="modal">
+                    close
+                  </button>
+
+                </div>
+              </div>
+
+            </div>
+
+          </div>
+        </div>
+        <div class="col-sm-4">
+
+          <button type="button" class="btn btn-success btn-lg mod10" data-toggle="modal" data-target="#mode10">
+            <span class="bub">- introspection<span> <br>
+                click to read
+
+          </button>
+          <!-- modal -->
+          <div class="modal fade" id="mode10">
+            <div class="modal-dialog">
+              <!-- modal content -->
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal"> &#xA9; </button>
+                  <h4 class="modal-title">
+                    TITLE: INTROSPECTION<br>
+                    BY: WENDY OTOO
+                  </h4>
+                </div>
+                <div class="modal-body">
+                  <p>
+                    Comic dreams flow through me.<br>
+                    Rotation of a trillion planets, nebulas and galaxies like an aura surrounds me.<br>
+                    Scary feeling, exciting feeling, full feeling.<br>
+                    Match my frequency.<br>
+                    Change colours with me.<br>
+                    Let me experience you.<br>
+                    Change my focus so I can see, hear you, feel you.<br>
+                    An outer world experience.<br>
+                    Constellated connections of what is and isn't,<br>
+                    Acceptance and understanding.<br>
+                    Abundance to the ground I walk.<br>
+                    I balance my solar systemic top.<br>
+                    Moving through dimensions without a care.<br>
+
+                  </p>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-default" data-dismiss="modal">
+                    close
+                  </button>
+
+                </div>
+              </div>
+
+            </div>
+
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+
+
+
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
